Got special queries

--- a/todo.txt
+++ b/todo.txt
@@ -1,14 +1,29 @@
 
+http://docs.mongodb.org/manual/reference/operator/query-modifier/
+cursor special fields -> sort, explain, hint .... see QueryOpBuilder
+
+collection, validate cmd, distinct cmd, mapReduce, group
+
+database authenticate, profiling, validate, eval, buildInfo, listDatabases, serverStatus 
+
 default write concerns
 
 Give DB objs some nice toStr
 
 On connection, check the mongo version, assert it's >= 2.6
 
-When writing, maybe convert MongoMaps into Document Objs that cache the size?
-
 explain this:
 the plan is to give a basic level of support, so should the mongo API grow (as it has been doing) then this driver doesn't get outdated.
+
+index to use asc / desc
+
+For v1.0
+-------
+gridfs
+roles
+
+When writing, maybe convert MongoMaps into Document Objs that cache the size?
+
 
 
 Bad fantomongo
