--- a/todo.txt
+++ b/todo.txt
@@ -9,9 +9,6 @@ Authentication
 
 
 
-default write concerns
-{ w: 1, wtimeout: 0 }
-
 Give DB objs some nice toStr
 
 On connection, check the mongo version, assert it's >= 2.6
@@ -19,6 +16,12 @@ On connection, check the mongo version, assert it's >= 2.6
 explain this:
 the plan is to give a basic level of support, so should the mongo API grow (as it has been doing) then this driver doesn't get outdated.
 
+     Alien-Factory
+ _____ ___ ___ ___ ___ 
+|     | . |   | . | . |
+|_|_|_|___|_|_|_  |___|
+              |___|0.0.2
+               
 
 For v1.0
 --------
