--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,17 @@
 
+On failover, and ip node is no longer the master, then reset all connections and re-hunt the master.
+
+afMongo::MongoCmdErr - Command 'mapReduce' failed. MongoDB says: not master
+
+Stack Trace:
+  afMongo::MongoCmdErr : Command 'mapReduce' failed. MongoDB says: not master
+  afMongo::Operation.runCommand (Operation.fan:36)
+  afMongo::Cmd.run (Cmd.fan:72)
+  afMongo::ConnectionManagerPooled.leaseConnection (ConnectionManagerPooled.fan:322)
+  afMongo::Cmd.run (Cmd.fan:71)
+  afMongo::Collection.mapReduce (Collection.fan:416)
+
+
 For Future
 ----------
 Role Commands (new in 2.6)
